# crossbow

./: .gitignore  CMakeLists.txt  CrossbowConfig.cmake.in  Readme.md  TODO.md  astyle.sh  astylef.sh
cmake/: FindIbverbs.cmake  FindRdmacm.cmake  FindTBB.cmake
crossbow/: Protocol.hpp  Serializer.hpp  alignment.hpp  byte_buffer.hpp  concurrent_map.hpp  enum_underlying.hpp  fixed_size_stack.hpp  non_copyable.hpp  program_options.hpp  singleconsumerqueue.hpp  singleton.hpp  string.hpp
crossbow/program_options/: exceptions.hpp  parser.hpp  type_printer.hpp
crossbow/serializer/: BoostOptional.hpp  Serializer.hpp  crossbow_string.hpp  map.hpp  string.hpp  unordered_map.hpp  vector.hpp
libs/: CMakeLists.txt
libs/allocator/: CMakeLists.txt
libs/allocator/include/crossbow/: ChunkAllocator.hpp  allocator.hpp
libs/allocator/src/: ChunkAllocator.cpp  allocator.cpp
libs/infinio/: CMakeLists.txt  EventDispatcher.hpp.in
libs/infinio/example/: EchoServer.cpp  PingClient.cpp
libs/infinio/include/crossbow/infinio/: AsioEventDispatcher.hpp  BatchingMessageSocket.hpp  ByteBuffer.hpp  Endpoint.hpp  ErrorCode.hpp  EventDispatcher.hpp  EventProcessor.hpp  Fiber.hpp  InfinibandBuffer.hpp  InfinibandLimits.hpp  InfinibandService.hpp  InfinibandSocket.hpp  MessageId.hpp  RpcClient.hpp  RpcServer.hpp  TbbEventDispatcher.hpp
libs/infinio/src/: AddressHelper.cpp  AddressHelper.hpp  BufferManager.cpp  BufferManager.hpp  DeviceContext.cpp  DeviceContext.hpp  Endpoint.cpp  ErrorCode.hpp  EventProcessor.cpp  EventProcessor.hpp  Fiber.cpp  InfinibandBuffer.cpp  InfinibandService.cpp  InfinibandSocket.cpp  InfinibandSocketImpl.hpp  Logging.hpp  RpcClient.cpp  WorkRequestId.hpp
libs/infinityverbs/: CMakeLists.txt
libs/infinityverbs/examples/: .cproject  .project
libs/infinityverbs/examples/scripts/: compile-on-fdr.sh
libs/infinityverbs/examples/src/: main.cpp
libs/infinityverbs/src/: InfinityVerbs.hpp
libs/infinityverbs/src/core/: Configuration.hpp  Context.cpp  Context.hpp  DirectMemoryAccessStore.cpp  DirectMemoryAccessStore.hpp  MemoryTokenStore.cpp  MemoryTokenStore.hpp  SerializedMemoryToken.hpp
libs/infinityverbs/src/memory/: AtomicValue.cpp  AtomicValue.hpp  MemoryRegion.hpp  MemoryRegionType.hpp  MemoryToken.cpp  MemoryToken.hpp  RdmaBuffer.cpp  RdmaBuffer.hpp
libs/infinityverbs/src/queues/: QueuePair.cpp  QueuePair.hpp  QueuePairFactory.cpp  QueuePairFactory.hpp
libs/infinityverbs/src/tools/: AddressResolver.cpp  AddressResolver.hpp  Lock.cpp  Lock.hpp  ThreadControl.cpp  ThreadControl.hpp
libs/logger/: CMakeLists.txt
libs/logger/include/crossbow/: logger.hpp
libs/logger/src/: logger.cpp
libs/postgres/: CMakeLists.txt  postgres.cpp  postgres.hpp  postgres_message.cpp  postgres_message.h
libs/thread/: CMakeLists.txt  common.hpp  condition_variable.cpp  config.h.cmake  ctest_assert.h  fibonacci.cpp  mutex.cpp  simple_test.cpp  thread.cpp  thread.hpp
libs/thread/thread/: condition_variable.hpp  mutex.hpp  thread.hpp
test/: CMakeLists.txt
test/program_options/: CMakeLists.txt  po_simple_test.cpp
test/string/: CMakeLists.txt  at.pass.cpp  back.pass.cpp  begin.pass.cpp  c_str.pass.cpp  capacity.pass.cpp  cbegin.pass.cpp  cend.pass.cpp  char.pass.cpp  char_assignment.pass.cpp  char_size.pass.cpp  char_string.pass.cpp  clear.pass.cpp  copy.pass.cpp  copy_alloc.pass.cpp  copy_assignment.pass.cpp  crbegin.pass.cpp  crend.pass.cpp  data.pass.cpp  db_back.pass.cpp  db_cback.pass.cpp  db_cfront.pass.cpp  db_cindex.pass.cpp  db_front.pass.cpp  db_index.pass.cpp  db_iterators_2.pass.cpp  db_iterators_3.pass.cpp  db_iterators_4.pass.cpp  db_iterators_5.pass.cpp  db_iterators_6.pass.cpp  db_iterators_7.pass.cpp  db_iterators_8.pass.cpp  default_noexcept.pass.cpp  dtor_noexcept.pass.cpp  empty.pass.cpp  end.pass.cpp  erase_iter_db1.pass.cpp  erase_iter_db2.pass.cpp  erase_iter_iter_db1.pass.cpp  erase_iter_iter_db2.pass.cpp  (+78 more)
test/thread/: CMakeLists.txt
