find_package(Boost 1.49 COMPONENTS system)
find_package(OpenSSL)
if (${Boost_FOUND} AND ${OPENSSL_FOUND})
    include_directories(${Boost_INCLUDE_DIR})
    include_directories(${OPENSSL_INCLUDE_DIR})
    set(SRC postgres_message.h
            postgres_message.cpp
            postgres.hpp
            postgres.cpp)
    add_library(crossbow_postgres ${SRC})
    target_link_libraries(crossbow_postgres ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES})
    install(FILES "postgres.hpp" DESTINATION include/crossbow)
    install(TARGETS crossbow_postgres DESTINATION lib)
elseif (${Boost_FOUND})
    message(STATUS "Could not find OpenSSL - won't build thread library")
    set(HAS_POSTGRES False)
elseif (${OPENSSL_FOUND})
    message(STATUS "Could not find Boost - won't build thread library")
    set(HAS_POSTGRES False)
else ()
    message(STATUS "Could not find Boost and OpenSSL - won't build thread library")
    set(HAS_POSTGRES False)
endif ()
